--- a/.gitignore
+++ b/.gitignore
@@ -7,18 +7,42 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Dependencies & build outputs
+node_modules/
+dist/
+dist-ssr/
+
+# Cache/artifacts
+.cache/
+.eslintcache
+.parcel-cache/
+.turbo/
+*.tsbuildinfo
 *.local
 
-# Editor directories and files
+# Test coverage (jika pakai test runner)
+coverage/
+
+# OS / editor
+.DS_Store
+Thumbs.db
+.idea/
 .vscode/*
 !.vscode/extensions.json
-.idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# Netlify CLI (jika pernah menjalankan netlify dev)
+.netlify/
+
+# Env files (jangan commit rahasia)
+.env
+.env.*.local
+# tapi tetap track contoh
+!.env.example
+
+# Optional: keluaran alat build CSS (kalau file ini di-generate, bukan ditulis manual)
+# public/output.css
